hphp/hack/test/typecheck/shape_key_exists6.php.exp
File "shape_key_exists6.php", line 6, characters 10-48:
Invalid return type (Typing[4110])
File "shape_key_exists6.php", line 5, characters 18-23:
Expected string
File "Shapes.hhi", line 49, characters 6-9:
But got bool
